--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,5 +1,11 @@
 .title {
+    display: block;
+    width: stretch;
     font-family: 'Courgette', cursive;
+    background-color: pink;
+    text-align: center;
+    color: white;
+    font-size: 60px;
 }
 
 .jumbotron {
