--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,43 +1,72 @@
-.title {
-    display: block;
-    width: stretch;
-    font-family: 'Courgette', cursive;
-    background-color: pink;
-    text-align: center;
-    color: white;
-    font-size: 60px;
-}
-
 body {
     position: relative;
     background-image: url('/assets/south-africa.jpg');
     background-color: hsla(0,0%,100%,0.40);
     background-blend-mode: overlay;
+    background-attachment: fixed;
+    background-position: left center;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
-.row {
-    max-height: 400px;
+.container {
+    display: grid;
+    /* margin: 10px 20px; */
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+    grid-auto-rows: 300px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+@media (min-width: 768px) {
+    .container, .container-md, .container-sm {
+        max-width: 800px;
+    }
+}
+
+.card {
+    position: relative;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.latest-blog {
+    grid-column: span 2;
+}
+
+.about-me {
+    min-width: 300px;
+    background: url('/assets/queen.jpg');
+    background-position: center top;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.all-blogs {
+    grid-column: span 3;
 }
 .card-title.h5 {
     text-align: center;
 }
 
-.blogs {
-    width: auto;
-}
+@media (max-width: 767px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 320px;
+    }
+    .latest-blog {
+        grid-column: span 1;
+    }
 
-.about {
-    width: auto;
-}
-
-.about > img {
-    max-height: 400px;
-}
-
-.all-blogs {
-    clear: left;
-}
-.card {
-    margin: 10px;
+    .about-me {
+        background-position: center top;
+    }
+    .all-blogs {
+        grid-column: span 1;
+    }
 }
