Added fontawesome. Added footer with icons

--- a/src/components/customNav.css
+++ b/src/components/customNav.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: pink;
-    position: relative;
+    position: sticky;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
